--- a/inference_outlier.ipynb
+++ b/inference_outlier.ipynb
@@ -56,11 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_digit_from_image_reconstruct(img_path, model, output_image_path, device):\n",
+    "def calculate_anchor_sizes(image, num_sizes=3, size_ratios=[1, 0.75, 0.5]):\n",
+    "    height, width, _ = image.shape\n",
+    "\n",
+    "    # 이미지 크기에 기반한 기본 앵커 크기 계산\n",
+    "    base_size = min(height, width) // 4  # 예시: 가로, 세로 중 작은 쪽의 1/4\n",
+    "\n",
+    "    # 여러 크기와 비율의 앵커 박스 계산\n",
+    "    anchor_sizes = []\n",
+    "    for i in range(1, num_sizes + 1):\n",
+    "        size = base_size * i\n",
+    "        for ratio in size_ratios:\n",
+    "            anchor_width = int(size * ratio)\n",
+    "            anchor_height = int(size * (1 / ratio))\n",
+    "            anchor_sizes.append((anchor_width, anchor_height))\n",
+    "\n",
+    "    return anchor_sizes\n",
+    "\n",
+    "\n",
+    "def detect_digit_from_anchor_image_reconstruct(img_path, model,vgg16, output_image_path, device, num):\n",
     "    # Load your model\n",
     "    #model.load_state_dict(torch.load('best_model.pth'))\n",
     "    model.eval()\n",
@@ -71,38 +89,68 @@
     "    # Define the window size and step size\n",
     "    win_size = 16\n",
     "    window_size = (win_size, win_size)\n",
+    "    print('image:', image.shape)\n",
+    "    window_size = (int(image.shape[0]//5), int(image.shape[1]//5))\n",
     "    step_size = 10\n",
     "\n",
     "    # List to store bounding box coordinates and predictions\n",
     "    bbox_coords = []\n",
+    "    final_bbox_coords = []\n",
+    "    losses_array = []\n",
+    "    predicted_arr = []\n",
+    "    red_arr = []\n",
+    "\n",
+    "    anchor_sizes = calculate_anchor_sizes(image)\n",
+    "    anchor_ratios = [1, 0.75, 0.5]\n",
     "\n",
     "    # Sliding window\n",
     "    for y in range(0, image.shape[0] - window_size[1], step_size):\n",
     "        for x in range(0, image.shape[1] - window_size[0], step_size):\n",
-    "            # Extract and preprocess the window\n",
-    "            window = image[y:y + window_size[1], x:x + window_size[0]]\n",
-    "            processed_window = cv2.resize(window, (32, 32))\n",
-    "            processed_window = transforms.ToTensor()(processed_window)\n",
-    "            #processed_window = transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])(processed_window)\n",
-    "            processed_window = processed_window.unsqueeze(0).to(torch.float32).to(device)\n",
-    "            #print('processed_window:', processed_window.shape)\n",
-    "            # Classify the window\n",
-    "            with torch.no_grad():\n",
-    "                x_reconstructed, mu, log_var  = model(processed_window)\n",
-    "                loss = vae_loss(x_reconstructed, processed_window, mu, log_var)\n",
-    "                #print('loss:', loss.item())\n",
-    "                #print(stop)\n",
-    "                #_, predicted = torch.max(outputs, 1)\n",
+    "            for size in anchor_sizes:\n",
+    "                for ratio in anchor_ratios:\n",
+    "                    # calculate anchor box dimensions\n",
+    "                    anchor_width = int(size[0] * ratio)\n",
+    "                    anchor_height = int(size[1] * (1 / ratio))\n",
     "\n",
-    "            # If it's a digit, save the bounding box coordinates and prediction\n",
-    "            if loss.item() >= 1000:\n",
-    "               #print('outputs:', loss.item())\n",
-    "               bbox_coords.append((x, y, x + window_size[0], y + window_size[1], loss.item()))\n",
+    "                     # Calculate coordinates of the window\n",
+    "                    x1 = max(x - anchor_width // 2, 0)\n",
+    "                    y1 = max(y - anchor_height // 2, 0)\n",
+    "                    x2 = min(x1 + anchor_width, image.shape[1])\n",
+    "                    y2 = min(y1 + anchor_height, image.shape[0])\n",
     "\n",
+    "                    # Extract and preprocess the window\n",
+    "                    #window = image[y:y + window_size[1], x:x + window_size[0]]\n",
+    "                    window = image[y1:y2, x1:x2]\n",
+    "                    processed_window = cv2.resize(window, (32, 32))\n",
+    "                    processed_window = transforms.ToTensor()(processed_window)\n",
+    "                    #processed_window = transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])(processed_window)\n",
+    "                    processed_window = processed_window.unsqueeze(0).to(torch.float32).to(device)\n",
+    "                    #print('processed_window:', processed_window.shape)\n",
+    "                    # Classify the window\n",
+    "                    with torch.no_grad():\n",
+    "                        x_reconstructed, mu, log_var  = model(processed_window)\n",
+    "                        loss = vae_loss(x_reconstructed, processed_window, mu, log_var)\n",
+    "                        losses_array.append(loss.item())\n",
+    "                        #_, predicted = torch.max(outputs, 1)\n",
+    "                        bbox_coords.append((x, y, x + window_size[0], y + window_size[1], loss.item()))\n",
+    "\n",
+    "                        with torch.no_grad():\n",
+    "                            outputs = vgg16(processed_window)\n",
+    "                            _, predicted = torch.max(outputs, 1)\n",
+    "                            predicted_arr.append(predicted.item())\n",
+    "                        \n",
+    "\n",
+    "    sorted_lst_asc = sorted(losses_array)[::-1]\n",
+    "    limit_loss = sorted_lst_asc[num]\n",
+    "    for bbox, lss, pred in zip(bbox_coords, losses_array, predicted_arr):\n",
+    "        if lss > limit_loss:\n",
+    "            final_bbox_coords.append(bbox)\n",
+    "            red_arr.append(pred)\n",
     "    # Draw bounding boxes and text on the original image\n",
-    "    for (x1, y1, x2, y2, prediction) in bbox_coords:\n",
+    "    for (x1, y1, x2, y2, prediction), pred_digit in zip(final_bbox_coords, red_arr):\n",
+    "        print('prediction:',pred_digit)\n",
     "        cv2.rectangle(image, (x1, y1), (x2, y2), (0, 255, 0), 1)\n",
-    "        #cv2.putText(image, str(\"box\"), (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 1)\n",
+    "        cv2.putText(image, str(pred_digit), (x1, y1+10), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 255), 1)\n",
     "\n",
     "    # Save the final image with bounding boxes and text\n",
     "    cv2.imwrite(output_image_path, image)"
@@ -110,25 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "No CUDA GPUs are available",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m learning_rate \u001b[39m=\u001b[39m \u001b[39m1e-3\u001b[39m\n\u001b[1;32m      7\u001b[0m vae \u001b[39m=\u001b[39m VAE(image_channels\u001b[39m=\u001b[39mimage_channels, h_dim\u001b[39m=\u001b[39mh_dim, z_dim\u001b[39m=\u001b[39mz_dim)\n\u001b[0;32m----> 8\u001b[0m vae \u001b[39m=\u001b[39m vae\u001b[39m.\u001b[39;49mto(device)\n\u001b[1;32m      9\u001b[0m vae\u001b[39m.\u001b[39mload_state_dict(torch\u001b[39m.\u001b[39mload(\u001b[39m'\u001b[39m\u001b[39mweights/vae_best_model.pth\u001b[39m\u001b[39m'\u001b[39m))\n",
-      "File \u001b[0;32m~/miniconda3/envs/cv_proj/lib/python3.9/site-packages/torch/nn/modules/module.py:1160\u001b[0m, in \u001b[0;36mModule.to\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1156\u001b[0m         \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   1157\u001b[0m                     non_blocking, memory_format\u001b[39m=\u001b[39mconvert_to_format)\n\u001b[1;32m   1158\u001b[0m     \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m, non_blocking)\n\u001b[0;32m-> 1160\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_apply(convert)\n",
-      "File \u001b[0;32m~/miniconda3/envs/cv_proj/lib/python3.9/site-packages/torch/nn/modules/module.py:810\u001b[0m, in \u001b[0;36mModule._apply\u001b[0;34m(self, fn, recurse)\u001b[0m\n\u001b[1;32m    808\u001b[0m \u001b[39mif\u001b[39;00m recurse:\n\u001b[1;32m    809\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren():\n\u001b[0;32m--> 810\u001b[0m         module\u001b[39m.\u001b[39;49m_apply(fn)\n\u001b[1;32m    812\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[1;32m    813\u001b[0m     \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[1;32m    814\u001b[0m         \u001b[39m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[1;32m    815\u001b[0m         \u001b[39m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    820\u001b[0m         \u001b[39m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[1;32m    821\u001b[0m         \u001b[39m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/cv_proj/lib/python3.9/site-packages/torch/nn/modules/module.py:810\u001b[0m, in \u001b[0;36mModule._apply\u001b[0;34m(self, fn, recurse)\u001b[0m\n\u001b[1;32m    808\u001b[0m \u001b[39mif\u001b[39;00m recurse:\n\u001b[1;32m    809\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren():\n\u001b[0;32m--> 810\u001b[0m         module\u001b[39m.\u001b[39;49m_apply(fn)\n\u001b[1;32m    812\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[1;32m    813\u001b[0m     \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[1;32m    814\u001b[0m         \u001b[39m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[1;32m    815\u001b[0m         \u001b[39m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    820\u001b[0m         \u001b[39m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[1;32m    821\u001b[0m         \u001b[39m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/cv_proj/lib/python3.9/site-packages/torch/nn/modules/module.py:833\u001b[0m, in \u001b[0;36mModule._apply\u001b[0;34m(self, fn, recurse)\u001b[0m\n\u001b[1;32m    829\u001b[0m \u001b[39m# Tensors stored in modules are graph leaves, and we don't want to\u001b[39;00m\n\u001b[1;32m    830\u001b[0m \u001b[39m# track autograd history of `param_applied`, so we have to use\u001b[39;00m\n\u001b[1;32m    831\u001b[0m \u001b[39m# `with torch.no_grad():`\u001b[39;00m\n\u001b[1;32m    832\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[0;32m--> 833\u001b[0m     param_applied \u001b[39m=\u001b[39m fn(param)\n\u001b[1;32m    834\u001b[0m should_use_set_data \u001b[39m=\u001b[39m compute_should_use_set_data(param, param_applied)\n\u001b[1;32m    835\u001b[0m \u001b[39mif\u001b[39;00m should_use_set_data:\n",
-      "File \u001b[0;32m~/miniconda3/envs/cv_proj/lib/python3.9/site-packages/torch/nn/modules/module.py:1158\u001b[0m, in \u001b[0;36mModule.to.<locals>.convert\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m   1155\u001b[0m \u001b[39mif\u001b[39;00m convert_to_format \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m t\u001b[39m.\u001b[39mdim() \u001b[39min\u001b[39;00m (\u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m):\n\u001b[1;32m   1156\u001b[0m     \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   1157\u001b[0m                 non_blocking, memory_format\u001b[39m=\u001b[39mconvert_to_format)\n\u001b[0;32m-> 1158\u001b[0m \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39;49mto(device, dtype \u001b[39mif\u001b[39;49;00m t\u001b[39m.\u001b[39;49mis_floating_point() \u001b[39mor\u001b[39;49;00m t\u001b[39m.\u001b[39;49mis_complex() \u001b[39melse\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m, non_blocking)\n",
-      "File \u001b[0;32m~/miniconda3/envs/cv_proj/lib/python3.9/site-packages/torch/cuda/__init__.py:298\u001b[0m, in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    296\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mCUDA_MODULE_LOADING\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39menviron:\n\u001b[1;32m    297\u001b[0m     os\u001b[39m.\u001b[39menviron[\u001b[39m\"\u001b[39m\u001b[39mCUDA_MODULE_LOADING\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mLAZY\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 298\u001b[0m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_cuda_init()\n\u001b[1;32m    299\u001b[0m \u001b[39m# Some of the queued calls may reentrantly call _lazy_init();\u001b[39;00m\n\u001b[1;32m    300\u001b[0m \u001b[39m# we need to just return without initializing in that case.\u001b[39;00m\n\u001b[1;32m    301\u001b[0m \u001b[39m# However, we must not let any *other* threads in!\u001b[39;00m\n\u001b[1;32m    302\u001b[0m _tls\u001b[39m.\u001b[39mis_initializing \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: No CUDA GPUs are available"
-     ]
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -145,11 +186,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "detect_digit_from_image_reconstruct('test_images/test3.png', vae, 'output_with_boxes_reconstruct.png', device)"
+    "vgg16 =  VGG16(num_classes=11).to(device)\n",
+    "vgg16.load_state_dict(torch.load('weights/best_model.pth'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image: (38, 99, 3)\n",
+      "prediction: 1\n",
+      "prediction: 1\n",
+      "prediction: 1\n",
+      "prediction: 1\n",
+      "prediction: 1\n",
+      "prediction: 1\n",
+      "prediction: 1\n",
+      "prediction: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "detect_digit_from_image_reconstruct('test_images/test4.png', vae, vgg16, 'output_with_boxes_reconstruct.png', device, num=8)"
    ]
   },
   {
